--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -7,7 +7,7 @@ on:
   # schedule:
   #     - cron: "22 22 * * *"
   #   workflow_dispatch:
-  
+
 jobs:
   build-deploy:
     runs-on: ubuntu-18.04
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v1                  
       with:
         submodules: true
+      env:
+        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
 
     - name: Install Ruby Dev                     
       run: sudo apt-get install ruby-dev
