--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -34,6 +34,6 @@ jobs:
 
     - name: Deploy                               
       uses: peaceiris/actions-gh-pages@v3
-      env:
+      with:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         PUBLISH_DIR: ./public
