--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches:
       - master
+  # Run every five minutes
   # schedule:
-  #     - cron: "22 22 * * *"
+  #     - cron: "*/5 * * * *"
   #   workflow_dispatch:
 
 jobs:
@@ -32,4 +33,5 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        publish_dir: ./public
+        external_repository: rmoff/rmoff.github.io
+        publish_branch: master
