--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -1,9 +1,9 @@
 name: GitHub Pages
 
-on:
-  push:
-    branches:
-      - master
+#on:
+#  push:
+#    branches:
+#      - master
   # Run every five minutes
   # schedule:
   #     - cron: "*/5 * * * *"
