--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Deploy                               
       uses: peaceiris/actions-gh-pages@v3
       with:
-        deploy_key: ${{ secrets.ACTIONS_TEST_DEPLOY_KEY }}
-        external_repository: rmoff/rmoff-test.github.io
-        # deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        # external_repository: rmoff/rmoff.github.io
+        # deploy_key: ${{ secrets.ACTIONS_TEST_DEPLOY_KEY }}
+        # external_repository: rmoff/rmoff-test.github.io
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        external_repository: rmoff/rmoff.github.io
         publish_branch: master
