--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -1,13 +1,12 @@
 name: GitHub Pages
 
 on:
- push:
-   branches:
+  push:
+    branches:
      - master
-  # Run every five minutes
-  # schedule:
-  #     - cron: "*/5 * * * *"
-  #   workflow_dispatch:
+    # Run every five minutes
+  schedule:
+    - cron: '*/5 * * * *'
 
 jobs:
   build-deploy:
