Stop dropping the custom domain

--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -31,8 +31,10 @@ jobs:
     - name: Deploy                               
       uses: peaceiris/actions-gh-pages@v3
       with:
-        # deploy_key: ${{ secrets.ACTIONS_TEST_DEPLOY_KEY }}
-        # external_repository: rmoff/rmoff-test.github.io
         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         external_repository: rmoff/rmoff.github.io
         publish_branch: master
+        # Without `keep_files` the `CNAME` file in the target repo will get removed
+        # and the custom domain configured for GitHub pages will get dropped every 
+        # time the action runs…
+        keep_files: true
