--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
      - master
-    # Run every five minutes
   schedule:
+    # Run every ten minutes
     - cron: '*/10 * * * *'
 
 jobs:
