Change schedule to hourly (since every ten minutes didn't really work anyway)

--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -5,8 +5,8 @@ on:
     branches:
      - master
   schedule:
-    # Run every ten minutes
-    - cron: '*/10 * * * *'
+    # Run on the hour
+    - cron: '0 * * * *'
 
 jobs:
   build-deploy:
