Remove scheduled build, not needed

--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
      - master
-  schedule:
-    # Run on the hour
-    - cron: '0 * * * *'
+  # schedule:
+  #   # Run on the hour
+  #   - cron: '0 * * * *'
 
 jobs:
   build-deploy:
