temporarily disable publishing

--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -2,8 +2,8 @@ name: Build & deploy live site
 
 on:
   push:
-    branches:
-     - master
+#     branches:
+#      - master
   # schedule:
   #   # Run on the hour
   #   - cron: '0 * * * *'
