--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -21,8 +21,7 @@ jobs:
         echo BASEURL="https://rmoff-rmoff-blog-blog-pr-preview-'"$PRNUMBER"'.surge.sh/" >> $GITHUB_ENV
 
     - name: Report base URL env var
-      run: |
-        echo "${{ env.baseurl }}" 
+      run: echo "${{ env.baseurl }}" 
 
 #     - name: Setup Hugo                           
 #       uses: peaceiris/actions-hugo@v2
