--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup base URL env var
       run: |
         export PRNUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH") 
-        echo BASEURL="https://rmoff-rmoff-blog-blog-pr-preview-'"$PRNUMBER"'.surge.sh/" >> $GITHUB_ENV
+        echo BASEURL="https://rmoff-rmoff-blog-blog-pr-preview-"$PRNUMBER".surge.sh/" >> $GITHUB_ENV
 
     - name: Report base URL env var
       run: echo "${{ env.baseurl }}" 
