--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -9,11 +9,16 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-#     - name: Install Ruby Dev                     
-#       run: sudo apt-get install ruby-dev
+    - name: Install Ruby Dev                     
+      run: sudo apt-get install ruby-dev
 
-#     - name: Install AsciiDoctor and Rouge
-#       run: sudo gem install asciidoctor rouge
+    - name: Install AsciiDoctor and Rouge
+      run: sudo gem install asciidoctor rouge
+
+    - name: Setup Hugo                           
+      uses: peaceiris/actions-hugo@v2
+      with:
+        hugo-version: '0.85.0'
 
     - name: Setup base URL env var
       run: |
@@ -23,22 +28,17 @@ jobs:
     - name: Report base URL env var
       run: echo "${{ env.baseurl }}" 
 
-#     - name: Setup Hugo                           
-#       uses: peaceiris/actions-hugo@v2
-#       with:
-#         hugo-version: '0.85.0'
+    - name: Build                                
+      run: hugo --buildFuture --buildDrafts --baseURL "${{ env.baseurl }}" 
 
-#     - name: Build                                
-#       run: hugo --buildFuture --buildDrafts --baseURL "${{ env.baseurl }}" 
-
-#     - name: Deploy                               
-#       uses: afc163/surge-preview@v1
-#       id: preview_step
-#       with:
-#         surge_token: ${{ secrets.SURGE_TOKEN }}
-#         github_token: ${{ secrets.GITHUB_TOKEN }}
-#         dist: public
-#         failOnError: 'true'
-#         teardown: true
-#         build: |
-#           echo Deploying to surge.sh
+    - name: Deploy                               
+      uses: afc163/surge-preview@v1
+      id: preview_step
+      with:
+        surge_token: ${{ secrets.SURGE_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        dist: public
+        failOnError: 'true'
+        teardown: true
+        build: |
+          echo Deploying to surge.sh
