--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -1,10 +1,10 @@
-name: blog-pr-preview
+name: Build and Deploy PR Preview
 
 on:
   pull_request:
 
 jobs:
-  build-deploy:
+  preview-pr:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v3
@@ -23,7 +23,7 @@ jobs:
     - name: Setup base URL env var
       run: |
         export PRNUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH") 
-        echo BASEURL="https://rmoff-rmoff-blog-blog-pr-preview-"$PRNUMBER".surge.sh/" >> $GITHUB_ENV
+        echo BASEURL="https://rmoff-rmoff-blog-preview-pr-"$PRNUMBER".surge.sh/" >> $GITHUB_ENV
 
     - name: Report base URL env var
       run: echo "${{ env.baseurl }}" 
