--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -29,7 +29,7 @@ jobs:
       run: echo "${{ env.baseurl }}" 
 
     - name: Build                                
-      run: hugo --buildFuture --buildDrafts --baseURL "${{ env.baseurl }}" 
+      run: hugo --buildFuture --buildDrafts --baseURL ${{ env.baseurl }}
 
     - name: Deploy                               
       uses: afc163/surge-preview@v1
