--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -26,10 +26,10 @@ jobs:
         echo BASEURL="https://rmoff-rmoff-blog-preview-"$PRNUMBER".surge.sh/" >> $GITHUB_ENV
 
     - name: Report base URL env var
-      run: echo "${{ env.baseurl }}" 
+      run: echo "${{ env.BASEURL }}" 
 
     - name: Build                                
-      run: hugo --buildFuture --buildDrafts --baseURL ${{ env.baseurl }}
+      run: hugo --buildFuture --buildDrafts --baseURL "${{ env.BASEURL }}"
 
     - name: Deploy                               
       uses: afc163/surge-preview@v1
