Re-enable builds

--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -1,12 +1,12 @@
 name: Build & deploy live site
 
-# on:
-#   push:
-#     branches:
-#      - master
-  # schedule:
-  #   # Run on the hour
-  #   - cron: '0 * * * *'
+on:
+  push:
+    branches:
+     - master
+#   schedule:
+#     # Run on the hour
+#     - cron: '0 * * * *'
 
 jobs:
   build-deploy:
