--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -29,7 +29,7 @@ jobs:
       run: echo "${{ env.BASEURL }}" 
 
     - name: Build                                
-      run: hugo --buildFuture --buildDrafts --baseURL "${{ env.BASEURL }}"
+      run: hugo --buildFuture --baseURL "${{ env.BASEURL }}"
 
     - name: Deploy                               
       uses: afc163/surge-preview@v1
