--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,7 @@ languageCode : "en-us"
 title: "rmoff's random ramblings"
 googleAnalytics: "UA-75492960-1"
 paginate: 20
+timeout: 120s
 pygmentsStyle: pygments
 
 params:
