--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -12,8 +12,11 @@ jobs:
     - name: Install Ruby Dev                     
       run: sudo apt-get install ruby-dev
 
-    - name: Install AsciiDoctor and Rouge
-      run: sudo gem install asciidoctor rouge
+    - name: Install AsciiDoctor
+      run: sudo gem install asciidoctor
+      
+    - name: Install Rouge
+      run: sudo gem install rouge -v 3.30.0
 
     - name: Setup Hugo                           
       uses: peaceiris/actions-hugo@v2
