--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -5,15 +5,18 @@ on:
 
 jobs:
   preview:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
 
     - name: Install Ruby Dev                     
       run: sudo apt-get install ruby-dev
 
-    - name: Install AsciiDoctor and Rouge
-      run: sudo gem install asciidoctor rouge
+    - name: Install AsciiDoctor
+      run: sudo gem install asciidoctor
+      
+    - name: Install Rouge
+      run: sudo gem install rouge -v 3.30.0
 
     - name: Setup Hugo                           
       uses: peaceiris/actions-hugo@v2
