--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -34,6 +34,11 @@ jobs:
     - name: Build                                
       run: hugo --buildFuture --baseURL "${{ env.BASEURL }}"
 
+    - name: Check links
+      uses: untitaker/hyperlink@0.1.26
+      with:
+        args: public --sources content/post
+
     - name: Deploy                               
       uses: afc163/surge-preview@v1
       id: preview_step
