--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Check links
       uses: untitaker/hyperlink@0.1.26
       with:
-        args: public --sources content/post
+        args: public
 
     - name: Deploy                               
       uses: afc163/surge-preview@v1
