--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -34,16 +34,7 @@ jobs:
     - name: Build                                
       run: hugo --buildFuture --baseURL "${{ env.BASEURL }}"
 
-
-    - name: Link Checker (lychee)
-      uses: lycheeverse/lychee-action@v1.5.1
-      with:
-        fail: false
-        args: 'public'
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          
-    - name: Link Checker (lychee) (hyperlink)
+    - name: Link Checker (hyperlink)
       uses: untitaker/hyperlink@0.1.26
       with:
         args: public
