--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -15,7 +15,7 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v1.5.1
         with:
-          fail: true
+          fail: false
           args: 'https://rmoff.net'
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
