Add Mastodon social link

--- a/config.yaml
+++ b/config.yaml
@@ -54,6 +54,10 @@ menu:
     title: "fab fa-youtube-square"
     url: https://www.youtube.com/c/rmoff
     weight: -8
+  - name: mastodon
+    title: "fab fa-mastodon"
+    url: https://data-folks.masto.host/@rmoff
+    weight: -7
   - name: twitter
     title: "fab fa-twitter-square"
     url: https://twitter.com/rmoff/
@@ -67,6 +71,7 @@ markup:
   asciidocExt:
     attributes: {allow-uri-read}
     safeMode: unsafe
+  defaultMarkdownHandler: goldmark
   goldmark:
     renderer:
       unsafe: true
