Add Cloudflare Pages as preview host

--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -34,7 +34,7 @@ jobs:
     - name: Build                                
       run: hugo --baseURL "${{ env.BASEURL }}"
 
-    - name: Deploy                               
+    - name: Deploy to surge                            
       uses: afc163/surge-preview@v1
       id: preview_step
       with:
@@ -45,3 +45,12 @@ jobs:
         teardown: true
         build: |
           echo Deploying to surge.sh
+
+    - name: Publish to Cloudflare Pages
+      uses: cloudflare/pages-action@v1
+      with:
+        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        accountId: 8d56a7ca471ccdf550c9feffa02d05ba
+        projectName: rmoff-blog-preview
+        directory: public
+        gitHubToken: ${{ secrets.GITHUB_TOKEN }}
