--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy PR Preview
+name: Build and Deploy PR Preview to surge
 
 on:
   pull_request:
@@ -41,16 +41,7 @@ jobs:
         surge_token: ${{ secrets.SURGE_TOKEN }}
         github_token: ${{ secrets.GITHUB_TOKEN }}
         dist: public
-        failOnError: 'true'
+        failOnError: false
         teardown: true
         build: |
           echo Deploying to surge.sh
-
-    - name: Publish to Cloudflare Pages
-      uses: cloudflare/pages-action@v1
-      with:
-        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        accountId: 8d56a7ca471ccdf550c9feffa02d05ba
-        projectName: rmoff-blog-preview
-        directory: public
-        gitHubToken: ${{ secrets.GITHUB_TOKEN }}
