--- a/.github/workflows/preview-blog-cloudflare.yaml
+++ b/.github/workflows/preview-blog-cloudflare.yaml
@@ -24,7 +24,7 @@ jobs:
         hugo-version: '0.105.0'
 
     - name: Build                                
-      run: hugo --baseURL https://rmoff-blog-preview.pages.dev/
+      run: hugo --baseURL https://preview.rmoff.net/
 
     - name: Publish to Cloudflare Pages
       uses: cloudflare/pages-action@v1
