add branch setting

--- a/.github/workflows/preview-blog-cloudflare.yaml
+++ b/.github/workflows/preview-blog-cloudflare.yaml
@@ -34,3 +34,4 @@ jobs:
         projectName: rmoff-blog-preview
         directory: public
         gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
