--- a/.github/workflows/external_link_check.yml
+++ b/.github/workflows/external_link_check.yml
@@ -10,6 +10,9 @@ jobs:
     name: Check links
     runs-on: ubuntu-latest
     steps:
+      # Check out so the .lycheeignore is available
+      - uses: actions/checkout@v3
+    
       - name: Check links
         id: lychee
         uses: lycheeverse/lychee-action@v1.8.0
