ignore reddit, don't abort job on failre

--- a/.github/workflows/external_link_check.yml
+++ b/.github/workflows/external_link_check.yml
@@ -17,8 +17,8 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v1.8.0
         with:
-          args: https://rmoff.net --no-progress 
-          fail: true
+          args: https://rmoff.net --no-progress --exclude https://www.reddit.com
+          fail: false
           jobSummary: true
           format: markdown
         env:
