--- a/config.yaml
+++ b/config.yaml
@@ -46,26 +46,30 @@ menu:
     url: https://talks.rmoff.net
     weight: -9
   social:
+  - name: youtube
+    title: "fab fa-youtube-square"
+    url: https://www.youtube.com/c/rmoff
+    weight: -7
+  - name: bluesky
+    title: "fab fa-bluesky"
+    url: https://bsky.app/profile/rmoff.net
+    weight: -8
   - name: github
     title: "fab fa-github-square"
     url: https://github.com/rmoff/
     weight: -6
-  - name: youtube
-    title: "fab fa-youtube-square"
-    url: https://www.youtube.com/c/rmoff
-    weight: -8
   - name: mastodon
     title: "fab fa-mastodon"
     url: https://data-folks.masto.host/@rmoff
-    weight: -7
+    weight: -4
   - name: twitter
     title: "fab fa-twitter-square"
     url: https://twitter.com/rmoff/
-    weight: -7
+    weight: -5
   - name: linkedin
     title: "fab fa-linkedin"
     url: https://www.linkedin.com/in/robinmoffatt/
-    weight: -5
+    weight: -4
 
 markup:
   asciidocExt:
