Fix FA, change socials ordering

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 theme: "story"
 baseURL: "https://rmoff.net"
 languageCode : "en-us"
-title: "rmoff's random ramblings"
+title: "rmoff's random ramblings2"
 googleAnalytics: "UA-75492960-1"
 paginate: 20
 timeout: 120s
@@ -46,18 +46,22 @@ menu:
     url: https://talks.rmoff.net
     weight: -9
   social:
-  - name: youtube
-    title: "fab fa-youtube-square"
-    url: https://www.youtube.com/c/rmoff
-    weight: -7
   - name: bluesky
-    title: "fab fa-bluesky"
+    title: "fa-brands fa-bluesky"
     url: https://bsky.app/profile/rmoff.net
     weight: -8
   - name: github
     title: "fab fa-github-square"
     url: https://github.com/rmoff/
+    weight: -7
+  - name: youtube
+    title: "fab fa-youtube-square"
+    url: https://www.youtube.com/c/rmoff
     weight: -6
+  - name: linkedin
+    title: "fab fa-linkedin"
+    url: https://www.linkedin.com/in/robinmoffatt/
+    weight: -5
   - name: mastodon
     title: "fab fa-mastodon"
     url: https://data-folks.masto.host/@rmoff
@@ -65,11 +69,7 @@ menu:
   - name: twitter
     title: "fab fa-twitter-square"
     url: https://twitter.com/rmoff/
-    weight: -5
-  - name: linkedin
-    title: "fab fa-linkedin"
-    url: https://www.linkedin.com/in/robinmoffatt/
-    weight: -4
+    weight: -3
 
 markup:
   asciidocExt:
