--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 theme: "story"
 baseURL: "https://rmoff.net"
 languageCode : "en-us"
-title: "rmoff's random ramblings"
+title: "rmoff's random ramblings2"
 googleAnalytics: "UA-75492960-1"
 paginate: 20
 timeout: 120s
@@ -46,26 +46,30 @@ menu:
     url: https://talks.rmoff.net
     weight: -9
   social:
+  - name: bluesky
+    title: "fa-brands fa-bluesky"
+    url: https://bsky.app/profile/rmoff.net
+    weight: -8
   - name: github
     title: "fab fa-github-square"
     url: https://github.com/rmoff/
-    weight: -6
+    weight: -7
   - name: youtube
     title: "fab fa-youtube-square"
     url: https://www.youtube.com/c/rmoff
-    weight: -8
-  - name: mastodon
-    title: "fab fa-mastodon"
-    url: https://data-folks.masto.host/@rmoff
-    weight: -7
-  - name: twitter
-    title: "fab fa-twitter-square"
-    url: https://twitter.com/rmoff/
-    weight: -7
+    weight: -6
   - name: linkedin
     title: "fab fa-linkedin"
     url: https://www.linkedin.com/in/robinmoffatt/
     weight: -5
+  - name: mastodon
+    title: "fab fa-mastodon"
+    url: https://data-folks.masto.host/@rmoff
+    weight: -4
+  - name: twitter
+    title: "fab fa-twitter-square"
+    url: https://twitter.com/rmoff/
+    weight: -3
 
 markup:
   asciidocExt:
