--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 theme: "story"
 baseURL: "https://rmoff.net"
 languageCode : "en-us"
-title: "rmoff's random ramblings2"
+title: "rmoff's random ramblings"
 googleAnalytics: "UA-75492960-1"
 paginate: 20
 timeout: 120s
