Add table of contents functionality to Hugo theme and AsciiDoc defaults

--- a/config.yaml
+++ b/config.yaml
@@ -65,12 +65,21 @@ menu:
 
 markup:
   asciidocExt:
-    attributes: {allow-uri-read}
+    attributes:
+      allow-uri-read: ""
+      toc: ""
+      toc-title: "Table of Contents"
+      toc-placement: "auto"
+      toclevels: "2"
     safeMode: unsafe
   defaultMarkdownHandler: goldmark
   goldmark:
     renderer:
       unsafe: true
+    tableOfContents:
+      endLevel: 4
+      ordered: false
+      startLevel: 2
 
 security:
   enableInlineShortcodes: false
