--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,8 @@ baseURL: "https://rmoff.net"
 languageCode : "en-us"
 title: "rmoff's random ramblings"
 googleAnalytics: "UA-75492960-1"
-paginate: 20
+pagination:
+  pagerSize: 20
 timeout: 120s
 pygmentsStyle: pygments
 
@@ -31,7 +32,7 @@ outputs:
    taxonomy:
       - HTML
       - RSS
-   taxonomyTerm:
+   term:
       - HTML
       - RSS
 
