add twitter back in

--- a/config.yaml
+++ b/config.yaml
@@ -40,28 +40,32 @@ menu:
   - name: about
     title: about
     url: https://talks.rmoff.net/bio
-    weight: -10
+    weight: -12
   - name: talks
     title: talks
     url: https://talks.rmoff.net
-    weight: -9
+    weight: -11
   social:
   - name: bluesky
     title: "fa-brands fa-bluesky"
     url: https://bsky.app/profile/rmoff.net
-    weight: -8
+    weight: -10
+  - name: twitter
+    title: "fa-brands fa-x-twitter"
+    url: https://twitter.com/rmoff/
+    weight: -9
   - name: github
     title: "fab fa-github-square"
     url: https://github.com/rmoff/
-    weight: -7
+    weight: -8
   - name: youtube
     title: "fab fa-youtube-square"
     url: https://www.youtube.com/c/rmoff
-    weight: -6
+    weight: -7
   - name: linkedin
     title: "fab fa-linkedin"
     url: https://www.linkedin.com/in/robinmoffatt/
-    weight: -5
+    weight: -6
 
 markup:
   asciidocExt:
