--- a/.github/workflows/external_link_check.yml
+++ b/.github/workflows/external_link_check.yml
@@ -17,7 +17,7 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v1.8.0
         with:
-          args: https://rmoff.net --no-progress --exclude https://www.reddit.com  --exclude https://www.linkedin.com
+          args: https://rmoff.net --no-progress --exclude https://www.reddit.com  --exclude https://www.linkedin.com --exclude https://old.reddit.com
           fail: false
           jobSummary: true
           format: markdown
