Add header/footer for IL

--- a/config.yaml
+++ b/config.yaml
@@ -76,6 +76,7 @@ markup:
       toc-placement: "auto"
       toclevels: "2"
     safeMode: unsafe
+    workingFolderCurrent: true
   defaultMarkdownHandler: goldmark
   goldmark:
     renderer:
