--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -35,7 +35,7 @@ jobs:
       run: ./build-slides.sh
 
     - name: Build
-      run: hugo
+      run: hugo --destination public
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
