--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -38,7 +38,7 @@ jobs:
       run: ./build-slides.sh
 
     - name: Build
-      run: hugo --baseURL "${{ env.BASEURL }}"
+      run: hugo --baseURL "${{ env.BASEURL }}" --destination public
 
     - name: Deploy to surge
       uses: afc163/surge-preview@v1
