--- a/.github/workflows/preview-blog-cloudflare.yaml
+++ b/.github/workflows/preview-blog-cloudflare.yaml
@@ -23,8 +23,8 @@ jobs:
       with:
         hugo-version: '0.105.0'
 
-    - name: Build                                
-      run: hugo --baseURL https://preview.rmoff.net/
+    - name: Build
+      run: hugo --baseURL https://preview.rmoff.net/ --destination public
 
     - name: Publish to Cloudflare Pages
       uses: cloudflare/pages-action@v1
