--- a/.github/workflows/pr_check_links.yaml
+++ b/.github/workflows/pr_check_links.yaml
@@ -24,7 +24,7 @@ jobs:
         hugo-version: '0.105.0'
 
     - name: Build                                
-      run: hugo --buildFuture 
+      run: hugo --buildFuture --destination public
 
     - name: Link Checker (hyperlink)
       uses: untitaker/hyperlink@0.1.26
