--- a/.github/workflows/preview-blog.yaml
+++ b/.github/workflows/preview-blog.yaml
@@ -6,25 +6,18 @@ on:
 jobs:
   build_preview:
     runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      packages: read
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install Ruby Dev
-      run: sudo apt-get install ruby-dev
-
-    - name: Install AsciiDoctor
-      run: sudo gem install asciidoctor
-
-    - name: Install AsciiDoctor Reveal.js
-      run: sudo gem install asciidoctor-revealjs
-
-    - name: Install Rouge
-      run: sudo gem install rouge -v 3.30.0
-
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
+    - name: Log in to Container Registry
+      uses: docker/login-action@v3
       with:
-        hugo-version: '0.105.0'
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup base URL env var
       run: |
@@ -34,11 +27,19 @@ jobs:
     - name: Report base URL env var
       run: echo "${{ env.BASEURL }}"
 
-    - name: Build reveal.js presentations
-      run: ./build-slides.sh
+    - name: Build reveal.js presentations (requires local asciidoctor)
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ruby-dev
+        sudo gem install asciidoctor asciidoctor-revealjs
+        ./build-slides.sh
 
-    - name: Build
-      run: hugo --baseURL "${{ env.BASEURL }}" --destination public
+    - name: Build Hugo site with Docker
+      run: |
+        docker run --rm \
+          -v $(pwd):/src \
+          ghcr.io/${{ github.repository }}:0.152.2 \
+          --baseURL "${{ env.BASEURL }}" --destination public
 
     - name: Deploy to surge
       uses: afc163/surge-preview@v1
