--- a/.github/workflows/preview-blog-cloudflare.yaml
+++ b/.github/workflows/preview-blog-cloudflare.yaml
@@ -9,6 +9,7 @@ jobs:
     permissions:
       contents: read
       packages: read
+      deployments: write
     steps:
     - uses: actions/checkout@v3
 
