Update video and image title styling

--- a/config.yaml
+++ b/config.yaml
@@ -75,6 +75,7 @@ markup:
       toc-title: "Table of Contents"
       toc-placement: "auto"
       toclevels: "2"
+      figure-caption!: ""
     safeMode: unsafe
     workingFolderCurrent: true
   defaultMarkdownHandler: goldmark
