--- a/.github/workflows/preview-blog-cloudflare.yaml
+++ b/.github/workflows/preview-blog-cloudflare.yaml
@@ -34,6 +34,9 @@ jobs:
           ghcr.io/${{ github.repository }}:0.152.2 \
           --baseURL https://preview.rmoff.net/ --destination public
 
+    - name: Build Pagefind search index
+      run: npx pagefind --site public
+
     - name: Publish to Cloudflare Pages
       uses: cloudflare/pages-action@v1
       with:
