--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ content/.DS_Store
 .hugo_build.lock
 .aider*
 .claude/settings.local.json
-.claude/session_context.md
+.claude/session-context.md
 TODO.md
 node_modules
 test-results
